<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".sharemodule.ShareActivity">
    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical">

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="match_parent">
        <ImageView
                android:id="@+id/profile_iv"
                android:layout_width="match_parent"
                   android:layout_height="195dp"
                   android:src="@drawable/mom6"/>

        <androidx.cardview.widget.CardView
                android:id="@+id/refer_cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:cardCornerRadius="2dp"
                android:layout_marginTop="-40dp"
                android:layout_below="@+id/profile_iv">
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@color/white">
                <TextView
                        android:id="@+id/refer_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_medium"
                        android:text="@string/referearn"/>
                <TextView
                        android:id="@+id/getearn_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/refer_tv"
                        android:layout_margin="10dp"
                        android:textSize="@dimen/text_size_medium"
                        android:text="@string/refermesaage"/>

                <TextView
                        android:id="@+id/refrealc_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/getearn_tv"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:textSize="@dimen/text_size_small"
                        android:text="@string/referalcode"/>

                <TextView
                        android:id="@+id/refrealcode_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_below="@+id/refrealc_tv"
                        android:layout_margin="10dp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginBottom="@dimen/text_size_small"
                        android:textSize="@dimen/text_size_large"
                        android:text=""/>

                <ImageView
                        android:id="@+id/share_iv"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_below="@+id/refrealc_tv"
                        android:layout_marginRight="10dp"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/share_icon"/>


            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_margin="10dp"
                      android:orientation="vertical"
                      android:layout_below="@+id/refer_cv">
            <TextView
                    android:id="@+id/added_list_tv"
                    android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textColor="@color/dark_grey"
                      android:text="Your Added Engineer List"
                      android:textSize="18dp"
                      android:layout_margin="10dp"
            />

            <TextView
                    android:id="@+id/nolist_tv"
                    android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center"
                      android:visibility="gone"
                      android:layout_margin="20dp"
                      android:textSize="@dimen/text_size_medium"
                      android:text="Currently No Engineer added in ypour list."
            />

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:visibility="visible">

                <android.support.v7.widget.RecyclerView
                        android:id="@+id/engineer_list_rv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="2dp"
                />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>